@@ -1,3 +1,3 @@
 /usr/share/doc/cdrkit-doc/cdda2wav
-/usr/share/doc/cdrkit-doc/cdrecord
+/usr/share/doc/cdrkit-doc/wodim
 /usr/share/doc/cdrkit-doc/mkisofs
