@@ -1,2 +1,2 @@
 etc/default
-
+etc/wodim
