@@ -3,5 +3,5 @@ debian/tmp/usr/bin/readcd
 debian/tmp/usr/sbin/rscsi
 debian/tmp/usr/share/man/man1/readcd.1
 debian/tmp/usr/share/man/man1/wodim.1
-debian/README.ATAPI.setup usr/share/doc/cdrecord/
+debian/README.ATAPI.setup usr/share/doc/wodim/
 
